<resources>
    <string name="app_name">패션노트</string>
    <string name="kakao_app_key">11f277f6a9f96a369e010d8aa3bdef35</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_dialog_title">촬영 선택</string>
    <string name="cancel_video_record">동영상 촬영을 취소하였습니다.</string>
    <string name="check_permission"><![CDATA[권한 설정을 안하시면 앱이 정상적으로 실행되지 않을 수 있습니다. 수정하시려면 [설정] > [권한]에서 변경하세요.]]></string>
    <string name="check_permission_completed">권한체크가 완료되었습니다</string>
    <string name="check_permission_denied">권한체크가 거부되었습니다. 앱이 정상적으로 작동하지 않을 수 있습니다.</string>
    <string name="plus_text">대결에 사용 할</string>
    <string name="like_text">Like</string>
    <string name="plus_text2">사진을 등록하세요</string>
    <string name="setting_text">설정</string>
    <string name="account_text">계정</string>
    <string name="information_use">약관 및 정책</string>
    <string name="modify_profile_text">프로필 수정</string>
    <string name="system_text">로그인</string>
    <string name="logout_text">로그아웃</string>
    <string name="version_text">버전정보</string>
    <string name="ask_logout_text">로그아웃 하시겠습니까?</string>
    <string name="ask_withdrawal_text">탈퇴 하시겠습니까?</string>
    <string name="ask_remove_comment_text">댓글을 삭제 하시겠습니까?</string>
    <string name="ask_remove_image_text">사진을 삭제 하시겠습니까?</string>
    <string name="customer_support_text">고객지원</string>
    <string name="question_suggestion_text">문의 / 의견 보내기</string>
    <string name="privacy_policy_text">개인정보 처리방침</string>
    <string name="open_license_text">오픈소스 라이선스</string>
    <string name="revise_info_text">회원정보 수정</string>
    <string name="terms_of_service_text">이용약관</string>
    <string name="withdrawl_text">회원탈퇴</string>
    <string name="push_notification_text">푸쉬 알림</string>
    <string name="new_text">New</string>
    <string name="hot_text">HOT</string>
    <string name="following_text">팔로잉</string>
    <string name="no_comment">댓글이 없어요!</string>
    <string name="request_comment">댓글을 작성해주세요.</string>
    <string name="comment_title">댓글 %d개</string>
    <string name="sign_in">&lt;u>빠르게 가입하기!&lt;/u></string>
    <string name="find_info">&lt;u>비밀번호가 뭐였죠?&lt;/u></string>
    <string name="authentication">&lt;u>인증하기&lt;/u></string>
    <string name="authentication_mail">본인인증이 완료되지 않았습니다\n메일을 확인해주세요</string>
    <string name="complete_evaluation_text">소중한 평가 감사합니다\n사진을 저장하시겠습니까?</string>
    <string name="login_request_text">로그인이 필요해요</string>
    <string name="facebook_app_id">425739802079263</string>
    <string name="fb_login_protocol_scheme">fb425739802079263</string>
    <string name="webPrivacyPolicy">http://54.180.224.29:3333/api/v1/individual/information/policy</string>
    <string name="webTermsOfService">http://54.180.224.29:3333/api/v1/termsOfUse</string>
</resources>
